--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="{% static 'css/submenu.css' %}">
 	<link rel="stylesheet" href="{% static 'css/estilos.css' %}">
 	<script src="{% static 'js/jquery.min.js'%}"></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
 
 	{% endblock %}
 
@@ -28,53 +30,29 @@
 	<div class="container">
 
 		{% block navbar %}
-            <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="collapse navbar-collapse" id="navbarsExample03">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                   <a class="nav-link" href="{%url 'index'%}">Inicio<span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Usuarios</a>
-                  <div class="dropdown-menu" aria-labelledby="dropdown03">
-                    <a class="dropdown-item" href="{%url 'usuario_nuevo'%}">Nueva Persona</a>
-                    <a class="dropdown-item" href="{%url 'usuario_listar'%}">Registro y Edición</a>
-                  </div>
+                <li class="nav-item">
+                  <a class="nav-link" href="{%url 'usuario_listar'%}"  aria-expanded="false">Usuarios</a>
                 </li>
-                  <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Proyectistas</a>
-                  <div class="dropdown-menu" aria-labelledby="dropdown03">
-                    <a class="dropdown-item" href="{%url 'proyectista_nuevo'%}">Nuevo Proyectista</a>
-                    <a class="dropdown-item" href="{%url 'proyectista_listar'%}">Registro y Edición</a>
-                  </div>
+                  <li class="nav-item">
+                  <a class="nav-link" href="{%url 'proyectista_listar'%}"  aria-expanded="false">Proyectistas</a>
                 </li>
-                  <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Inspección de Obras</a>
-                  <div class="dropdown-menu" aria-labelledby="dropdown03">
-                    <a class="dropdown-item" href="{%url 'obra_nuevo'%}">Nueva Inspección</a>
-                    <a class="dropdown-item" href="{%url 'obra_listar'%}">Registros y Vencimientos</a>
-                  </div>
+                  <li class="nav-item">
+                  <a class="nav-link" href="{%url 'obra_listar'%}" aria-expanded="false">Inspección de Obras</a>
                 </li>
-                   <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Liquidación de planos</a>
-                  <div class="dropdown-menu" aria-labelledby="dropdown03">
-                    <a class="dropdown-item" href="{%url 'plano_nuevo'%}">Nuevo Pago</a>
-                    <a class="dropdown-item" href="{%url 'plano_listar'%}">Registros y Deudas</a>
-                  </div>
+                   <li class="nav-item">
+                  <a class="nav-link" href="{%url 'plano_listar'%}" aria-expanded="false">Liquidación de planos</a>
                    </li>
-                  <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Actas e Infracciones</a>
-                  <div class="dropdown-menu" aria-labelledby="dropdown03">
-                    <a class="dropdown-item" href="{%url 'notifica_nuevo'%}">Crea Acta</a>
-                    <a class="dropdown-item" href="{%url 'notifica_listar'%}">Registros y Vencimientos</a>
-                  </div>
+                  <li class="nav-item">
+                  <a class="nav-link" href="{%url 'notifica_listar'%}" aria-expanded="false">Actas e Infracciones</a>
                 </li>
-                  <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdown06" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cementerio</a>
-                  <div class="dropdown-menu" aria-labelledby="dropdown03">
-                    <a class="dropdown-item" href="{%url 'cementerio_nuevo'%}">Compra de lote</a>
-                    <a class="dropdown-item" href="{%url 'cementerio_listar'%}">Registros y Permisos de construccion</a>
-                  </div>
+                  <li class="nav-item">
+                  <a class="nav-link" href="{%url 'cementerio_listar'%}" aria-expanded="false">Cementerio</a>
                 </li>
                 </li>
               </ul>
