--- a/templates/obra/obra_list.html
+++ b/templates/obra/obra_list.html
@@ -1,20 +1,22 @@
 {% extends 'base/base.html' %}
+{% load static %}
 
 {%block header%}
 {%endblock%}
 
 {% block content %}
-<br>
-<br>
+<h5 class="p-3">Inspecciones y Vencimientos</h5>
 <form class="form-inline my-2 my-lg-0" type="get" method="POST" action="{%url 'obra_buscar'%}">
  {% csrf_token %}
     <input class="form-control mr-sm-2" type="text" placeholder="Search" name="buscalo" id="busca">
     <button class="btn btn-secondary my-2 my-sm-0" type="submit" href="" id="botonBus">Busqueda por DNI</button>
 </form>
-<br>
+    <a class="navbar-brand float-right" href="{%url 'obra_nuevo'%}" style="font-size:15px;">Nueva Inspección
+        <img class="boton-circulo ecirculo" src="{% static 'img/ingeniero.png' %}" style="width:50px;height:auto;">
+    </a>
 <table class="table table-hover">
     <thead>
-    <tr class="table-warning">
+    <tr class="table-light">
         <td scope="col">#</td>
         <td scope="col">Fecha de Inspeccion</td>
         <td scope="col">Usuario</td>
@@ -28,10 +30,12 @@
     </thead>
     <tbody>
             {% if object_list%}
-            {%for obra in object_list%}
-                {% if obra.presentacion == True or f_actual < obra.fecha_limite %}
+                {%for obra in object_list%}
+                    {% if f_actual < obra.fecha_limite and obra.presentacion == False%}
+        <tr class="table-light">
+                    {% elif obra.presentacion == True %}
         <tr class="table-success">
-                {% elif f_actual > obra.fecha_limite %}
+                    {% elif f_actual > obra.fecha_limite %}
             <tr class="table-danger">
                     {% endif %}
             <td>{{obra.id}}</td>
