--- a/templates/usuario/buscar.html
+++ b/templates/usuario/buscar.html
@@ -8,6 +8,8 @@ Busqueda de Clientes
 {%endblock%}
 
 {% block content %}
+<h5 class="p-3">Buscar Usuario</h5>
+<a class="btn btn-outline-primary" href="{%url 'usuario_listar'%}">Volver</a>
 <br>
 <br>
 <form class="form-inline my-2 my-lg-0" type="get" method="POST" action="{%url 'usuario_buscar'%}">
@@ -18,7 +20,7 @@ Busqueda de Clientes
 <br>
 <table class="table table-hover">
     <thead>
-    <tr class="table-warning" >
+    <tr class="table-light" >
         <td scope="col">#</td>
         <td scope="col">Nombre y Apellido</td>
         <td scope="col">DNI</td>
@@ -31,7 +33,7 @@ Busqueda de Clientes
     <tbody>
         {% if usuarios%}
         {%for   usuario in usuarios%}
-        <tr class="table-success">
+        <tr class="table-light">
             <td>{{usuario.id}}</td>
             <td>{{usuario.nombre}}</td>
             <td>{{usuario.dni}}</td>
