--- a/templates/plano/buscar.html
+++ b/templates/plano/buscar.html
@@ -3,6 +3,8 @@
 {%block header%}
 {%endblock%}
 {% block content %}
+<h5 class="p-3">Buscar Liquidación de Plano</h5>
+<a class="btn btn-outline-primary" href="{%url 'plano_listar'%}">Volver</a>
 <br>
 <br>
 <form class="form-inline my-2 my-lg-0" type="get" method="POST" action="{%url 'plano_buscar'%}">
@@ -13,7 +15,7 @@
 <br>
 <table class="table table-hover">
     <thead>
-        <tr class="table-warning">
+        <tr class="table-light">
             <td scope="col">#</td>
             <td scope="col">Fecha Solicitud</td>
             <td scope="col">Usuario</td>
