--- a/templates/plano/plano_list.html
+++ b/templates/plano/plano_list.html
@@ -1,4 +1,5 @@
 {% extends 'base/base.html' %}
+{% load static %}
 
 
 {%block header%}
@@ -17,16 +18,18 @@
         {% endif %}
     {% endfor %}
 {% endif %}
-<br>
+<h5 class="p-3">Registros y Liquidaciones de Planos</h5>
 <form class="form-inline my-2 my-lg-0" type="get" method="POST" action="{%url 'plano_buscar'%}" >
  {% csrf_token %}
     <input class="form-control mr-sm-2" type="text" placeholder="Search" name="buscalo" id="busca">
     <button class="btn btn-secondary my-2 my-sm-0" type="submit" href="" id="botonBus">Busqueda por DNI</button>
 </form>
-<br>
+    <a class="navbar-brand float-right" href="{%url 'plano_nuevo'%}" style="font-size:15px;">Nuevo Plano
+        <img class="boton-circulo ecirculo" src="{% static 'img/arquitectura.png' %}" style="width:50px;height:auto;">
+    </a>
 <table class="table table-hover">
     <thead>
-    <tr class="table-warning" >
+    <tr class="table-light" >
         <td scope="col">#</td>
         <td scope="col">Fecha Solicitud</td>
         <td scope="col">Usuario</td>
