--- a/templates/proyectista/buscar.html
+++ b/templates/proyectista/buscar.html
@@ -8,9 +8,11 @@ Busqueda de Proyectistas
 {%endblock%}
 
 {% block content %}
+<h5 class="p-3">Buscar Proyectista</h5>
+<a class="btn btn-outline-primary" href="{%url 'proyectista_listar'%}">Volver</a>
 <br>
 <br>
-<form class="form-inline my-2 my-lg-0" type="get" method="POST" action="{%url 'usuario_buscar'%}">
+<form class="form-inline my-2 my-lg-0" type="get" method="POST" action="{%url 'proyectista_buscar'%}">
  {% csrf_token %}
     <input class="form-control mr-sm-2" type="text" placeholder="Search" name="buscalo" id="busca">
     <button class="btn btn-secondary my-2 my-sm-0" type="submit" href="" id="botonBus">Busqueda por DNI</button>
@@ -18,7 +20,7 @@ Busqueda de Proyectistas
 <br>
 <table class="table table-hover">
     <thead>
-    <tr class="table-warning" >
+    <tr class="table-light" >
         <td scope="col">#</td>
         <td scope="col">Nombre y Apellido</td>
         <td scope="col">DNI</td>
@@ -32,7 +34,7 @@ Busqueda de Proyectistas
     <tbody>
         {% if proyectistas%}
         {%for   proyectista in proyectistas%}
-        <tr class="table-success">
+        <tr class="table-light">
             <td>{{proyectista.id}}</td>
             <td>{{proyectista.nombre}}</td>
             <td>{{proyectista.dni}}</td>
