--- a/templates/proyectista/proyectista_list.html
+++ b/templates/proyectista/proyectista_list.html
@@ -1,20 +1,22 @@
 {% extends 'base/base.html' %}
+{% load static%}
 
 {%block header%}
 {%endblock%}
 
 {% block content %}
-<br>
-<br>
+<h5 class="p-3">Lista Proyectistas</h5>
 <form class="form-inline my-2 my-lg-0" type="get" method="POST" action="{%url 'proyectista_buscar'%}">
  {% csrf_token %}
     <input class="form-control mr-sm-2" type="text" placeholder="Search" name="buscalo" id="busca">
     <button class="btn btn-secondary my-2 my-sm-0" type="submit" href="" id="botonBus">Busqueda por DNI</button>
 </form>
-<br>
+    <a class="navbar-brand float-right" href="{%url 'proyectista_nuevo'%}" style="font-size:15px;">Agregar Proyectista
+        <img class="boton-circulo ecirculo" src="{% static 'img/equipo.png' %}" style="width:50px;height:auto;">
+    </a>
 <table class="table table-hover">
     <thead>
-    <tr class="table-warning" >
+    <tr class="table-light" >
         <td scope="col">#</td>
         <td scope="col">Nombre y Apellido</td>
         <td scope="col">DNI</td>
@@ -28,7 +30,7 @@
     <tbody>
         {% if object_list %}
         {%for  proyectista in object_list%}
-        <tr class="table-success">
+        <tr class="table-light">
             <td>{{proyectista.id}}</td>
             <td>{{proyectista.nombre}}</td>
             <td>{{proyectista.dni}}</td>
